@@ -1,5 +1,5 @@
 ######################################################################
-# $Id: MemoryCache.pm,v 1.13 2001/03/23 00:15:06 dclinton Exp $
+# $Id: MemoryCache.pm,v 1.14 2001/04/08 22:48:37 dclinton Exp $
 # Copyright (C) 2001 DeWitt Clinton  All Rights Reserved
 #
 # Software distributed under the License is distributed on an "AS
@@ -16,7 +16,8 @@ use strict;
 use vars qw( @ISA );
 use Cache::BaseCache;
 use Cache::Cache qw( $EXPIRES_NEVER $TRUE $FALSE $SUCCESS $FAILURE );
-use Cache::CacheUtils qw( Build_Object
+use Cache::CacheUtils qw( Auto_Purge
+                          Build_Object
                           Object_Has_Expired
                           Static_Params
                           );
@@ -231,13 +232,25 @@ sub set
 {
   my ( $self, $identifier, $data, $expires_in ) = @_;
 
+  Auto_Purge( $self ) or
+    croak( "Couldn't auto purge" );
+
   my $default_expires_in = $self->get_default_expires_in( );
 
   my $object =
     Build_Object( $identifier, $data, $default_expires_in, $expires_in ) or
       croak( "Couldn't build cache object" );
 
-  my $object_dump = $self->_freeze( $object );
+  $self->set_object( $identifier, $object ) or
+    croak( "Couldn't set object" );
+
+  return $SUCCESS;
+}
+
+
+sub set_object
+{
+  my ( $self, $identifier, $object ) = @_;
 
   $self->_store( $identifier, $object ) or
     croak( "Couldn't store $identifier" );
