@@ -9,7 +9,7 @@
 # Change 1..1 below to 1..last_test_to_print .
 # (It may become useful if the test is moved to ./t subdirectory.)
 
-BEGIN { $| = 1; print "1..61\n"; }
+BEGIN { $| = 1; print "1..67\n"; }
 END {print "not ok 1\n" unless $loaded;}
 
 use Cache::Cache qw( $EXPIRES_NOW
